# rnavier

./: .gitignore  CMakeLists.txt  LICENSE  README
cmake/: CMakeParseArguments.cmake  FindGTS.cmake  FindROOT.cmake  copy_if_different.cmake  f2py_add.cmake
ndarray/: README
ndarray/ndarray/: ArrayRef.h  Vector.h  operators.h
src/: CMakeLists.txt
src/bjperturbation/: CMakeLists.txt  TBjFluctuation.cxx  TBjFluctuation.h  perturb_x.cfg  perturb_x.ini  perturb_xz.cfg  perturb_xz.ini  perturb_y.cfg  perturb_y.ini  perturb_z.cfg  perturb_z.ini  test_perturb.cxx  test_perturb.gpi  test_perturb.sh
src/eoss95p/: CMakeLists.txt  TEOSs95p.cxx  TEOSs95p.h
src/gubseric/: CMakeLists.txt  TICGbTest.cxx  TICGbTest.h  gubserfo.cfg  icgb.cfg  icgb2.cfg  test_fo.cxx  test_gubserfo.gpi  test_gubserfo.sh  test_icgb.cfg  test_icgb.gpi  test_icgb.ini  test_icgb.sh  test_icgb_hydro.cxx  test_icgb_ideal.gpi
src/hydro/: CMakeLists.txt  RNavierPath.cxx  RNavierPath.h  TBRSSS.cxx  TBRSSS.h  TBRSSSSolverS2.cxx  TBRSSSSolverS2.h  TBRSSSStep.cxx  TBRSSSStep.h  TBjRegulator.cxx  TBjRegulator.h  TDomain3D.cxx  TDomain3D.h  TEOS.cxx  TEOS.h  TFOMaker.cxx  TFOMaker.h  TGrid3D.cxx  TGrid3D.h  THModel3D.h  THYAnalysis.cxx  THYAnalysis.h  THydro3DBj.cxx  THydro3DBj.h  TIC3D.cxx  TIC3D.h  TICBjTest.cxx  TICBjTest.h  TIOBuffer.cxx  TIOBuffer.h  TLimiter.h  TNDArray.h  TRNRandom.cxx  TRNRandom.h  TRNavier3DBj.cxx  TRNavier3DBj.h  TStep3D.h  numeric.h
src/hydro/makecode/: TBRSSSSolverS2_J_util.inc  TBRSSSSolverS2_p_util.inc  TBRSSSStep_pisigma_util.inc  TBRSSSStep_sigmaomega_util.inc
src/phobosic/: CMakeLists.txt  TGlbEvent.cxx  TGlbEvent.h  TGlbMoments_cumulants.cxx  TGlbMoments_smearMoments.cxx  TICPhobosMC.cxx  TICPhobosMC.h  TPhobosMC.cxx  TPhobosMC.h  phobosic_linkdef.h
src/share/: rnavier-configini.py
src/share/defaults/: TBjRegulator.cfg  TEOSIdeal.cfg  TEOSs95p.cfg  TFOMaker.cfg  TGammaLaw.cfg  THydro3DBj.cfg  TICBjTest.cfg  TPhobosMC.cfg
src/share/scripts/: testpdf
src/share/scripts/copyright_utils/: copyright.txt  file_list.txt  find_files  insert_copyright  remove_copyright
src/sodic/: CMakeLists.txt  TEOSIdeal.cxx  TEOSIdeal.h  TICSodTest.cfg  TICSodTest.cxx  TICSodTest.h  sod.cfg  sod1d.cfg  sod2d_xy.cfg  sod2d_xz.cfg  sod2d_yz.cfg  test_sod.cxx  test_sod_1d.gpi  test_sod_1d.sh  test_sod_2d.cxx  test_sod_2d.gpi  test_sod_2d.sh  test_sod_compare.py
src/test_code2d/: 1  CMakeLists.txt  code2d.cfg  code2d.old  code3d.cfg  test_code2d.cxx  test_code2d.gpi  test_code2d.sh  test_code2dpi.gpi  test_code3d.cxx  test_code3d.gpi  test_code3d.sh
src/test_code2d/code2d/: code2d.ini  code2d_xvst.2dout  code2d_yvst.2dout
src/test_core/: CMakeLists.txt  gaus_x.cfg  gaus_y.cfg  icbj.cfg  test_gaus.cxx  test_gaus.gpi  test_gaus.sh  test_icbj.cxx  test_icbj.gpi  test_icbj.sh  test_icbj_hydro.cxx  test_ndarray.cxx  test_solveSource.cxx
